Proofreading by Cyril Brulebois & Christian Perrier Additional fixes by myself

--- a/po/fr.po
+++ b/po/fr.po
@@ -24,7 +24,7 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-08-18 03:58+0300\n"
-"PO-Revision-Date: 2007-05-21 21:20+0200\n"
+"PO-Revision-Date: 2007-10-03 18:09+0200\n"
 "Last-Translator: Frederic Bothamy <frederic.bothamy@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -350,7 +350,7 @@ msgstr ""
 #: lib/ehandle.c:111
 #, c-format
 msgid "dpkg: too many nested errors during error recovery !!\n"
-msgstr "dpkg : trop d'erreurs imbriquées lors d'une réparation !\n"
+msgstr "dpkg : trop d'erreurs imbriquées lors d'une réparation.\n"
 
 #: lib/ehandle.c:186
 msgid "out of memory for new cleanup entry with many arguments"
@@ -963,7 +963,7 @@ msgstr "échec de réallocation de la mémoire tampon de variable"
 
 #: src/archives.c:209
 msgid "process_archive ...  already disappeared !"
-msgstr "process_archive ... a déjà disparu !"
+msgstr "process_archive ... a déjà disparu."
 
 #: src/archives.c:229
 msgid "error reading from dpkg-deb pipe"
@@ -1180,18 +1180,18 @@ msgid ""
 "dpkg: no, cannot proceed with %s (--auto-deconfigure will help):\n"
 "%s"
 msgstr ""
-"dpkg : non, impossible d'autoriser %s (voir --auto-deconfigure) :\n"
+"dpkg : non, impossible d'effectuer %s (voir --auto-deconfigure) :\n"
 "%s"
 
 #: src/archives.c:888
 #, c-format
 msgid "removal of %.250s"
-msgstr "suppression de %.250s"
+msgstr "la suppression de %.250s"
 
 #: src/archives.c:915
 #, c-format
 msgid "installation of %.250s"
-msgstr "installation de %.250s"
+msgstr "l'installation de %.250s"
 
 #: src/archives.c:916
 #, c-format
@@ -1217,7 +1217,7 @@ msgstr ""
 #: src/archives.c:935
 #, c-format
 msgid "dpkg: warning - ignoring breakage, may proceed anyway !\n"
-msgstr "dpkg : avertissement - cassure ignorée, poursuite possible !\n"
+msgstr "dpkg : avertissement - cassure ignorée, poursuite possible.\n"
 
 #: src/archives.c:941
 #, c-format
@@ -1284,7 +1284,7 @@ msgstr "paquets en conflit - %.250s non installé"
 #: src/archives.c:1052
 #, c-format
 msgid "dpkg: warning - ignoring conflict, may proceed anyway !\n"
-msgstr "dpkg : avertissement - conflit ignoré, poursuite possible !\n"
+msgstr "dpkg : avertissement - conflit ignoré, poursuite possible.\n"
 
 #: src/archives.c:1090
 #, c-format
@@ -1595,7 +1595,7 @@ msgstr "échec de l'exécution du shell (%.250s)"
 msgid "Don't forget to foreground (`fg') this process when you're done !\n"
 msgstr ""
 "N'oubliez pas de mettre à l'avant-plan (« fg ») ce processus lorsque vous "
-"aurez fini !\n"
+"aurez fini.\n"
 
 #: src/configure.c:561
 #, c-format
@@ -1944,7 +1944,7 @@ msgstr ""
 msgid "dpkg not recorded as installed, cannot check for epoch support !\n"
 msgstr ""
 "dpkg non enregistré comme installé, impossible de vérifier s'il accepte la\n"
-"notion d'époque !\n"
+"notion d'époque.\n"
 
 #: src/enquiry.c:307
 msgid "--predep-package does not take any argument"
@@ -2839,7 +2839,7 @@ msgid ""
 " in this run !  Only configuring it once.\n"
 msgstr ""
 "Plus d'une copie du paquet %s ont été dépaquetées\n"
-" lors de ce traitement ! Une seule configuration effectuée.\n"
+" lors de ce traitement. Une seule configuration effectuée.\n"
 
 #: src/packages.c:269
 #, c-format
@@ -2939,7 +2939,7 @@ msgstr "échec de l'exécution (par execl) de « debsig-verify »"
 #: src/processarc.c:152
 #, c-format
 msgid "Verification on package %s failed!"
-msgstr "La vérification du paquet %s a échoué !"
+msgstr "La vérification du paquet %s a échoué."
 
 #: src/processarc.c:154
 #, c-format
@@ -2994,7 +2994,7 @@ msgstr "problème de pré-dépendance - %.250s non installé"
 #: src/processarc.c:273
 #, c-format
 msgid "dpkg: warning - ignoring pre-dependency problem !\n"
-msgstr "dpkg : avertissement - problème de pré-dépendance ignoré !\n"
+msgstr "dpkg : avertissement - problème de pré-dépendance ignoré\n"
 
 #: src/processarc.c:288
 #, c-format
