--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 dpkg (1.14.13) UNRELEASED; urgency=low
 
-  *
+  [ Frank Lichtenheld ]
+  * Add an own manpage for Dpkg's version format. Mostly stolen
+    from policy. Closes: #373003
 
  -- Guillem Jover <guillem@debian.org>  Thu, 29 Nov 2007 07:08:35 +0200
 
