po/de.po: Updated to 1238t0f52u.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-07  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1238t0f52u.
+
 2007-09-28  Peter Karlsson  <peter@softwolves.pp.se>
 
 	* po/sv.po: Updated to 1290t.
@@ -30,7 +34,7 @@
 
 2007-09-09  Helge Kreutzmann  <debian@helgefjell.de>
 
-	* po/de.po: Updated to 1254t135f.
+	* po/de.po: Updated to 1254t135u.
 
 2007-09-08  Guillem Jover  <guillem@debian.org>
 
