dpkg-source: Fix diff generation for filenames containing spaces
Include a trailing HT character in the diff labels if
the filename contains spaces. Apparantly this is
standard but undocumented diff behaviour. Based on
a patch by Marcel Toele.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-07  Frank Lichtenheld  <djpig@debian.org>
+	    Marcel Toele  <mtoele@kern.nl>
+
+	* scripts/dpkg-source.pl (handleformat): Include
+	a trailing HT character in the diff labels if
+	the filename contains spaces. Apparantly this is
+	standard but undocumented diff behaviour.
+
 2007-09-29  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-buildpackage.pl: Call checkversion()
