dpkg-buildpackage: Add -z/-Z to passthrough opts

--- a/ChangeLog
+++ b/ChangeLog
@@ -55,6 +55,11 @@
 	fakeroot only if it's available.
 
 2007-10-07  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-buildpackage.pl: Add -z/-Z to
+	passthrough opts (will be passed to dpkg-source).
+
+2007-10-07  Frank Lichtenheld  <djpig@debian.org>
 	    Marcel Toele  <mtoele@kern.nl>
 
 	* scripts/dpkg-source.pl (handleformat): Include
