dpkg-buildpackage.1: Document all options only passed to dpkg-source
-s[nsAkurKUR], -z, and -Z were missing.

--- a/man/dpkg-buildpackage.1
+++ b/man/dpkg-buildpackage.1
@@ -178,6 +178,14 @@ Passed unchanged to
 .BR dpkg\-source .
 May be repeated multiple times.
 .TP
+.BR \-s [ nsAkurKUR ]
+Passed unchanged to
+.BR dpkg\-source .
+.TP
+.BR \-z ", " \-Z
+Passed unchanged to
+.BR dpkg\-source .
+.TP
 .BI \-\-admindir= dir
 Change the location of the \fBdpkg\fR database. The default location is
 \fI/var/lib/dpkg\fP.
