--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,9 @@
 2007-10-09  Frank Lichtenheld  <djpig@debian.org>
 	
+	* dpkg-buildpackage.1: Document all
+	options only passed to dpkg-source.
+	-s[nsAkurKUR], -z, and -Z were missing.
+
 	* dpkg-source.1: Document -Z and -z.
 
 2007-10-08  Robert Luberda  <robert@debian.org>
