--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-08  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-gencontrol.pl: Refer to host architecture (instead of
+	build) in error string, and quote architecture name.
+
 2007-10-08  Frank Lichtenheld  <djpig@debian.org>,
             Guillem Jover  <guillem@debian.org>
 
