Add a Homepage field to debian/control
This might need to be changed later when there's a more formal site.

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ dpkg (1.14.7) UNRELEASED; urgency=low
     instead of unconditionally setting it to 'Installed'. Closes: #432893
     Thanks to Brian M. Carlson.
   * Add Vcs-Browser and Vcs-Git fields to debian/control.
+  * Add a Homepage field to debian/control (to be changed later when
+    there's a more formal site).
   * Allow comparing unsupported architectures for equality and identity.
     Based on a patch by Frank Lichtenheld. Closes: #427210
 
