Document Origin and Bugs fields in deb-control.5

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ dpkg (1.14.7) UNRELEASED; urgency=low
     there's a more formal site).
   * Allow comparing unsupported architectures for equality and identity.
     Based on a patch by Frank Lichtenheld. Closes: #427210
+  * Document Origin and Bugs fields in deb-control.5. Closes: #173463
 
   [ Frank Lichtenheld ]
   * Add _MTN to dpkg-source -i default regex. Suggested by Jari Aalto.
