--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-08  Guillem Jover  <guillem@debian.org>
+
+	* deb-control.5: Document Origin and Bugs fields.
+
 2007-10-07  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-buildpackage.1: Document that fakeroot is now the default
