Do not replace substvars for build dependencies

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-08  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-source.pl: Do not replace substvars for build
+	dependencies.
+
+2007-10-08  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-gencontrol.pl: Refer to host architecture (instead of
 	build) in error string, and quote architecture name.
 
