--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,8 @@ dpkg (1.14.7) UNRELEASED; urgency=low
   * Allow comparing unsupported architectures for equality and identity.
     Based on a patch by Frank Lichtenheld. Closes: #427210
   * Document Origin and Bugs fields in deb-control.5. Closes: #173463
+  * Do not replace substvars for build dependencies (it was not supported
+    anyway).
 
   [ Frank Lichtenheld ]
   * Add _MTN to dpkg-source -i default regex. Suggested by Jari Aalto.
