--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-10-08  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.7.
+
+2007-10-08  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-source.pl: Do not replace substvars for build
 	dependencies.
 
