--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.7) UNRELEASED; urgency=low
+dpkg (1.14.7) unstable; urgency=low
 
   [ Guillem Jover ]
   * Add back $dpkglib into @INC, needed by the controllib.pl require in
@@ -66,7 +66,7 @@ dpkg (1.14.7) UNRELEASED; urgency=low
   * Correct a typo in the French translation. Closes: #443276
   * Swedish (Peter Karlsson).
 
- -- Frank Lichtenheld <djpig@debian.org>  Sun, 23 Sep 2007 02:40:20 +0200
+ -- Guillem Jover <guillem@debian.org>  Mon, 08 Oct 2007 07:31:34 +0300
 
 dpkg (1.14.6) unstable; urgency=low
 
