2007-10-08  Helge Kreutzmann  <debian@helgefjell.de>
        * po/de.po: Updated to 1249t0f54u.
        * Removed the FIXMEs left in de.po by accident

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2007-10-08 07:26+0300\n"
-"PO-Revision-Date: 2007-10-07 16:38+0200\n"
+"PO-Revision-Date: 2007-10-08 18:45+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -604,9 +604,9 @@ msgstr "deb-control"
 
 # type: TH
 #: ../../man/deb-control.5:3
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2007-10-08"
-msgstr "2007-03-08"
+msgstr "2007-10-08"
 
 # type: Plain text
 #: ../../man/deb-control.5:6
@@ -767,17 +767,15 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/deb-control.5:71
-#, fuzzy
 msgid ""
 "In Debian, the B<Section> and B<Priority> fields have a defined set of "
 "accepted values based on the Policy Manual.  A list of these values can be "
 "obtained from the latest version of the B<debian-policy> package."
 msgstr ""
 "In Debian haben die B<Section>- und B<Priority>-Felder einen definierten "
-"Satz an akzeptierten Werten, basierend auf dem Richtlinien-Handbuch. Sie "
-"werden verwendet, um zu entscheiden, wie Pakete im Archiv angeordnet werden. "
-"Eine Liste dieser Werte kann aus der neusten Version des B<debian-policy>-"
-"Pakets erhalten werden."
+"Satz an akzeptierten Werten, basierend auf dem Richtlinien-Handbuch. Eine "
+"Liste dieser Werte kann aus der neusten Version des Pakets B<debian-policy> "
+"erhalten werden."
 
 # type: TP
 #: ../../man/deb-control.5:71
@@ -822,20 +820,20 @@ msgstr ""
 
 # type: TP
 #: ../../man/deb-control.5:86
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<Origin:> E<lt>nameE<gt>"
-msgstr "B<Source:> E<lt>Quell-NameE<gt>"
+msgstr "B<Origin:> E<lt>NameE<gt>"
 
 # type: Plain text
 #: ../../man/deb-control.5:89
 msgid "The name of the distribution this package is originating from."
-msgstr ""
+msgstr "Der Name der Distribution, aus der dieses Paket ursprünglich stammt."
 
 # type: TP
 #: ../../man/deb-control.5:89
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<Bugs:> E<lt>urlE<gt>"
-msgstr "B<Homepage:> E<lt>URLE<gt>"
+msgstr "B<Bugs:> E<lt>URLE<gt>"
 
 # type: Plain text
 #: ../../man/deb-control.5:93
@@ -844,6 +842,9 @@ msgid ""
 "is B<E<lt>bts_typeE<gt>://E<lt>bts_addressE<gt>>, like B<debbugs://bugs."
 "debian.org>."
 msgstr ""
+"Die URL der Fehlerdatenbank für dieses Paket. Das derzeit verwendete Format "
+"ist B<E<lt>BTS_ArtE<gt>://E<lt>BTS_AdresseE<gt>> wie in B<debbugs://bugs."
+"debian.org>."
 
 # type: TP
 #: ../../man/deb-control.5:93
@@ -4317,9 +4318,9 @@ msgstr "dpkg-buildpackage"
 
 # type: TH
 #: ../../man/dpkg-buildpackage.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2007-09-28"
-msgstr "2007-09-08"
+msgstr "2007-09-28"
 
 # type: Plain text
 #: ../../man/dpkg-buildpackage.1:4
@@ -4453,9 +4454,9 @@ msgstr ""
 
 # type: TP
 #: ../../man/dpkg-buildpackage.1:49
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-j>I<jobs>"
-msgstr "B<-L>I<libverzeichnis>"
+msgstr "B<-j>I<Aufträge>"
 
 # type: Plain text
 #: ../../man/dpkg-buildpackage.1:60
@@ -4623,7 +4624,6 @@ msgstr "B<-r>I<root-werde-Befehl>"
 # type: Plain text
 #.  what happens, if it contains spaces? (hs)
 #: ../../man/dpkg-buildpackage.1:137
-#, fuzzy
 msgid ""
 "When B<dpkg-buildpackage> needs to execute part of the build process as "
 "root, it prefixes the command it executes with I<gain-root-command> if one "
@@ -4639,12 +4639,13 @@ msgid ""
 msgstr ""
 "Wenn B<dpkg-buildpackage> einen Teil des Bauprozesses als Root ausführen "
 "muss, stellt es dem auszführenden Befehl den I<root-werde-Befehl> voran, "
-"falls dieser angegeben wurde. Der I<root-werde-Befehl> sollte der Name des "
-"Programmes im B<PATH> sein und wird als Argumente den Namen des wirklich "
+"falls dieser angegeben wurde. Andernfalls wird standardmäßig B<fakeroot> "
+"verwendet, falls es vorhanden ist. Der I<root-werde-Befehl> sollte der Name "
+"des Programmes im B<PATH> sein und wird als Argumente den Namen des wirklich "
 "auszuführenden Befehles und dessen Argumente erhalten. Der I<root-werde-"
 "Befehl> sollte keine Leerzeichen oder andere Shell-Metazeichen enthalten. "
 "Typischerweise ist der I<root-werde-Befehl> B<fakeroot>, B<sudo>, B<super> "
-"oder B<really>. B<su> ist nicht geeignet, da es die B<-c>-Option zur "
+"oder B<really>. B<su> ist nicht geeignet, da es eine B<-c>-Option zur "
 "Ausführung eines Befehles benötigt und selbst dann kann es nur die Shell des "
 "Benutzers mit B<-c> aufrufen, anstatt Argumente individuell zur Ausführung "
 "zu übergeben."
@@ -4719,9 +4720,9 @@ msgstr "Wird unverändert an B<dpkg-source> weitergegeben."
 
 # type: TP
 #: ../../man/dpkg-buildpackage.1:175
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-I>I<[pattern]>"
-msgstr "B<--list>I< Glob-Muster>"
+msgstr "B<-I>I<[Muster]>"
 
 # type: Plain text
 #: ../../man/dpkg-buildpackage.1:180
@@ -4771,9 +4772,8 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg-buildpackage.1:209
-#, fuzzy
 msgid "Copyright (C) 2007 Frank Lichtenheld"
-msgstr "Copyright (C) 2000 Wichert Akkerman"
+msgstr "Copyright (C) 2007 Frank Lichtenheld"
 
 # type: TH
 #: ../../man/dpkg-checkbuilddeps.1:1
@@ -6121,7 +6121,7 @@ msgid ""
 msgstr ""
 "Die Liste der erstellten Dateien, die Teil des Uploads sind, der vorbereitet "
 "wird. B<dpkg-gencontrol> fügt die vermuteten Dateinamen von Binärpaketen "
-"hinzu, deren Steuerdateien es hier generiert.FIXME(en)"
+"hinzu, deren Steuerdateien es hier generiert."
 
 # type: TH
 #: ../../man/dpkg-name.1:6
@@ -7071,9 +7071,9 @@ msgstr ""
 "beginnen, werden aus der Datei entfernt. B<dpkg-shlibdeps> list die "
 "Informationen über die Abhängigkeiten von Laufzeitbibliotheken aus B<debian/"
 "shlibs.local>, B</etc/dpkg/shlibs.override>, der B<shlibs>-"
-"Steuerbereichsdatei (FIXME)(en) des Pakets, von dem B<objdump>(FIXME(en)) "
-"angibt, dass es die Bibliotheksabhängigkeit erfüllt oder B</etc/dpkg/shlibs."
-"default>. Der erste Treffer wird verwendet."
+"Steuerbereichsdatei des Pakets, von dem B<objdump> angibt, dass es die "
+"Bibliotheksabhängigkeit erfüllt oder B</etc/dpkg/shlibs.default>. Der erste "
+"Treffer wird verwendet."
 
 # type: Plain text
 #: ../../man/dpkg-shlibdeps.1:41
@@ -7262,9 +7262,9 @@ msgstr "dpkg-source"
 
 # type: TH
 #: ../../man/dpkg-source.1:2
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2007-09-24"
-msgstr "2007-01-24"
+msgstr "2007-09-24"
 
 # type: Plain text
 #: ../../man/dpkg-source.1:5
@@ -7347,9 +7347,9 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg-source.1:44
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-b> I<directory> [I<orig-directory>|I<orig-targz>|'']"
-msgstr "B<-b> [I<Optionen>] I<Verzeichnis> [I<Orig-Verzeichnis>|I<Orig-targz>|'']"
+msgstr "B<-b> I<Verzeichnis> [I<Orig-Verzeichnis>|I<Orig-targz>|'']"
 
 # type: Plain text
 #: ../../man/dpkg-source.1:58
@@ -7409,7 +7409,6 @@ msgstr "Diese Option verneint ein vorher gesetztes B<-W>."
 
 # type: Plain text
 #: ../../man/dpkg-source.1:117
-#, fuzzy
 msgid ""
 "You may specify a perl regular expression to match files you want filtered "
 "out of the list of files for the diff. (This list is generated by a find "
@@ -7419,12 +7418,14 @@ msgid ""
 "can only be one active regexp, of multiple -i options only the last one will "
 "take effect."
 msgstr ""
-"Sie können einen regulären Ausdruck angeben, der auf Dateien passt, die Sie "
-"aus der Liste der Dateien für den Diff entfernen möchten; diese Liste wird "
-"von einem Find-Befehl generiert. B<-i> aktiviert diese Option mit der "
+"Sie können einen regulären Perl-Ausdruck angeben, der auf Dateien passt, die "
+"Sie aus der Liste der Dateien für den Diff entfernen möchten; diese Liste "
+"wird von einem Find-Befehl generiert. B<-i> aktiviert diese Option mit der "
 "Voreinstellung, dass die Steuerdateien und -Verzeichnisse der häufigsten "
 "Revisionskontrollsysteme, Backups, Swap-Dateien und Bau-Ausgabeverzeichnisse "
-"von Libtool herausgefiltert werden."
+"von Libtool herausgefiltert werden. Es kann nur einen aktiven regulären "
+"Ausdruck geben, von mehrfach angegebenen -i-Optionen wird nur die letzte "
+"berücksichtigt."
 
 # type: Plain text
 #: ../../man/dpkg-source.1:128
@@ -7442,13 +7443,12 @@ msgstr ""
 
 # type: TP
 #: ../../man/dpkg-source.1:128
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-I>[I<file-pattern>]"
-msgstr "B<-I>I<Dateiname>"
+msgstr "B<-I>[I<Dateimuster>]"
 
 # type: Plain text
 #: ../../man/dpkg-source.1:137
-#, fuzzy
 msgid ""
 "If this option is specified, the pattern will be passed to B<tar>(1)'s --"
 "exclude option when it is called to generate a .orig.tar.gz or .tar.gz file. "
@@ -7457,26 +7457,22 @@ msgid ""
 "patterns to exclude."
 msgstr ""
 "Falls diese Option angegeben wird, wird der Dateiname an die --exclude-"
-"Option von tar(FIXME(en)) weitergegeben, wenn es zur Erstellung der Datei ."
+"Option von B<tar>(1) weitergegeben, wenn es zur Erstellung der Datei ."
 "orig.tar.gz oder .tar.gz aufgerufen wird. Zum Beispiel führt -ICVS dazu, "
-"dass tar über CVS-Verzeichnisse hinweggeht, wenn es die tar.gz-Datei "
+"dass tar über CVS-Verzeichnisse hinweggeht, wenn es eine tar.gz-Datei "
 "erstellt. Diese Option kann mehrfach wiederholt werden, um mehrere "
 "Dateinamen aufzuführen, die ausgeschlossen werden sollen."
 
 # type: Plain text
 #: ../../man/dpkg-source.1:142
-#, fuzzy
 msgid ""
 "B<-I> by itself adds default --exclude options that will filter out control "
 "files and directories of the most common revision control systems, backup "
 "and swap files and Libtool build output directories."
 msgstr ""
-"Sie können einen regulären Ausdruck angeben, der auf Dateien passt, die Sie "
-"aus der Liste der Dateien für den Diff entfernen möchten; diese Liste wird "
-"von einem Find-Befehl generiert. B<-i> aktiviert diese Option mit der "
-"Voreinstellung, dass die Steuerdateien und -Verzeichnisse der häufigsten "
-"Revisionskontrollsysteme, Backups, Swap-Dateien und Bau-Ausgabeverzeichnisse "
-"von Libtool herausgefiltert werden."
+"B<i> fügt standardmäßig von Selbst --exclude-Optionen hinzu, die die "
+"Steuerdateien und -Verzeichnisse der häufigsten Revisionskontrollsysteme, "
+"Backups, Swap-Dateien und Bau-Ausgabeverzeichnisse von Libtool herausfiltern."
 
 # type: Plain text
 #: ../../man/dpkg-source.1:154
@@ -7497,6 +7493,8 @@ msgid ""
 "The default regexp and patterns for both options can be seen in the output "
 "of the B<--help> command."
 msgstr ""
+"Der voreingestellte reguläre Ausdruck und Muster für beide Optionen können in "
+"der Ausgabe des Befehls B<--help> gesehen werden."
 
 # type: TP
 #: ../../man/dpkg-source.1:157
@@ -7589,10 +7587,10 @@ msgid ""
 "and tarfile do not match a bad source archive will be generated."
 msgstr ""
 "Gibt an, dass die Originalquellen sowohl als Verzeichnis als auch als "
-"Tardatei verfügbar sind. FIXME(en) Es wird das Verzeichnis zur Erstellung "
-"des Diffs verwenden, aber die Tardatei für die B<.dsc>. Diese Option muss "
-"mit Vorsicht verwendet werden - falls das Verzeichnis und die Tardatei nicht "
-"zusammen passen, wird ein fehlerhaftes Quellarchiv erstellt."
+"Tardatei verfügbar sind. Es wird das Verzeichnis zur Erstellung des Diffs "
+"verwenden, aber die Tardatei für die B<.dsc>. Diese Option muss mit Vorsicht "
+"verwendet werden - falls das Verzeichnis und die Tardatei nicht zusammen "
+"passen, wird ein fehlerhaftes Quellarchiv erstellt."
 
 # type: TP
 #: ../../man/dpkg-source.1:197 ../../man/dpkg-source.1:242
@@ -8852,7 +8850,7 @@ msgstr ""
 # type: Plain text
 #: ../../man/dselect.1:182
 msgid "Installs selected packages."
-msgstr ""
+msgstr "Installiert ausgewählte Pakete."
 
 # type: Plain text
 #: ../../man/dselect.1:188
@@ -9451,13 +9449,13 @@ msgstr ""
 "Gibt den Dateinamen der Info-Datei an, deren Menüeintrag erstellt, "
 "aktualisiert oder entfernt werden soll. Falls B<--remove-exactly> angegeben "
 "wird, dann sollte I<Dateiname> der exakte Eintragsname sein, der entfernt "
-"werden soll (FIXME(en) d.h. »emacs-20/emacs« oder »gcc«), andernfalls wird "
-"der Basename des Dateinamens als Referenzierender des zu erstellenden "
-"Menüeintrags verwendet, es sei denn, es gibt einen überschreibenden START-"
-"INFO-DIR-Eintrag innerhalb der übergebenen Datei. Diese Datei muss daher im "
-"gleichen Verzeichnis wie die B<dir>-Datei existieren (oder gerade "
-"installiert werden, oder muss früher existiert haben, wenn ein Eintrag "
-"entfernt wird) (lesen Sie die Option B<--infodir>)."
+"werden soll (d.h. »emacs-20/emacs« oder »gcc«), andernfalls wird der Basename "
+"des Dateinamens als Referenzierender des zu erstellenden Menüeintrags "
+"verwendet, es sei denn, es gibt einen überschreibenden START-INFO-DIR-Eintrag "
+"innerhalb der übergebenen Datei. Diese Datei muss daher im gleichen "
+"Verzeichnis wie die B<dir>-Datei existieren (oder gerade installiert werden, "
+"oder muss früher existiert haben, wenn ein Eintrag entfernt wird) (lesen Sie "
+"die Option B<--infodir>)."
 
 # type: Plain text
 #: ../../man/install-info.8:64
@@ -11191,10 +11189,6 @@ msgid "B<ln>(1), FHS, the Filesystem Hierarchy Standard."
 msgstr ""
 "B<ln>(1), FHS, der Dateisystem Hierarchie-Standard (Filesystem Hierarchy "
 "Standard)."
-
-# type: TH
-#~ msgid "2007-08-31"
-#~ msgstr "2007-08-31"
 
 # type: Plain text
 #~ msgid ""
