--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+dpkg (1.14.8) UNRELEASED; urgency=low
+
+  [ Updated man pages translations ]
+  * German (Helge Kreutzmann).
+
+ --  <@debian.org>  Mon, 08 Oct 2007 18:47:34 +0300
+
 dpkg (1.14.7) unstable; urgency=low
 
   [ Guillem Jover ]
