--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-07  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1249t0f54u.
+	* Removed the FIXMEs left in de.po by accident
+
 2007-10-08  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
