Update Polish translations.

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,15 @@ dpkg (1.14.8) UNRELEASED; urgency=low
       shared library that is actively used, then it will fail. This can be
       disabled with the option --ignore-missing-info. Closes: #10807
 
+  [ Updated dpkg translations ]
+  * Polish (Robert Luberda).
+
+  [ Updated man pages translations ]
+  * Polish (Robert Luberda).
+
+  [ Updated scripts translations ]
+  * Polish (Robert Luberda).
+
  -- Raphael Hertzog <hertzog@debian.org>  Mon, 08 Oct 2007 20:49:51 +0200
 
 dpkg (1.14.8~newshlib) experimental; urgency=low
