--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-08  Robert Luberda  <robert@debian.org>
+
+	* po/pl.po: Update to 1183t19f101u.
+
 2007-10-08  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1249t0f54u.
