--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-08 Robert Luberda <robert@debian.org>
+
+	* LINGUAS, pl.po: Initial Polish translation with 322t69f71u.
+
 2007-09-28  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated Swedish to 462t.
