--- a/man/po/pl.po
+++ b/man/po/pl.po
@@ -3,9 +3,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.14.6\n"
+"Project-Id-Version: dpkg 1.14.17\n"
 "POT-Creation-Date: 2007-10-08 07:26+0300\n"
-"PO-Revision-Date: 2007-10-03 23:01+0200\n"
+"PO-Revision-Date: 2007-10-08 22:53+0200\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -609,9 +609,9 @@ msgstr "deb-control"
 
 # type: TH
 #: ../../man/deb-control.5:3
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2007-10-08"
-msgstr "2007-03-08"
+msgstr "2007-10-08"
 
 # type: Plain text
 #
@@ -771,16 +771,14 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/deb-control.5:71
-#, fuzzy
 msgid ""
 "In Debian, the B<Section> and B<Priority> fields have a defined set of "
 "accepted values based on the Policy Manual.  A list of these values can be "
 "obtained from the latest version of the B<debian-policy> package."
 msgstr ""
 "W Debianie pola B<Section> i B<Pririty> maj± ¶ci¶le zdefiniowany zbiór "
-"akceptowalnych warto¶ci opisany w Zasadach Polityki Debiana. Okre¶laj± one "
-"po³o¿enie pakietu w archiwum. Listê tych warto¶ci mo¿na znale¼æ w najnowszej "
-"wersji pakietu B<debian-policy>."
+"akceptowalnych warto¶ci opisany w Zasadach Polityki Debiana. Listê tych "
+"warto¶ci mo¿na znale¼æ w najnowszej wersji pakietu B<debian-policy>."
 
 # type: TP
 #: ../../man/deb-control.5:71
@@ -824,20 +822,20 @@ msgstr ""
 
 # type: TP
 #: ../../man/deb-control.5:86
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<Origin:> E<lt>nameE<gt>"
-msgstr "B<Source:> E<lt>nazwa ¼ród³aE<gt>"
+msgstr "B<Origin:> E<lt>nazwaE<gt>"
 
 # type: Plain text
 #: ../../man/deb-control.5:89
 msgid "The name of the distribution this package is originating from."
-msgstr ""
+msgstr "Nazwa dystrybucji, z której pochodzi pakiet."
 
 # type: TP
 #: ../../man/deb-control.5:89
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<Bugs:> E<lt>urlE<gt>"
-msgstr "B<Homepage:> E<lt>urlE<gt>"
+msgstr "B<Bugs:> E<lt>urlE<gt>"
 
 # type: Plain text
 #: ../../man/deb-control.5:93
@@ -846,6 +844,9 @@ msgid ""
 "is B<E<lt>bts_typeE<gt>://E<lt>bts_addressE<gt>>, like B<debbugs://bugs."
 "debian.org>."
 msgstr ""
+"URL systemu zg³aszania b³êdów dla tego pakietu. Obecnie u¿ywanym formatem "
+"jest is B<E<lt>typ_btsE<gt>://E<lt>adres_btsE<gt>>, na przyk³ad: B<debbugs://"
+"bugs.debian.org>."
 
 # type: TP
 #: ../../man/deb-control.5:93
@@ -897,7 +898,6 @@ msgstr "B<Depends:> E<lt>lista pakietówE<gt>"
 # check me!
 # type: Plain text
 #: ../../man/deb-control.5:114
-#, fuzzy
 msgid ""
 "List of packages that are required for this package to provide a non-trivial "
 "amount of functionality. The package maintenance software will not allow a "
@@ -910,8 +910,9 @@ msgstr ""
 "czê¶æ swojej funkcjonalno¶ci. Narzêdzia do zarz±dzania pakietami nie pozwol± "
 "na zainstalowanie pakietu (o ile nie u¿yje siê opcji typu --force), zanim "
 "nie zostan± zainstalowane wszystkie pakiety wymienione w polu B<Depends>. "
-"Skrypty poinstalacyjne pakietów wymienionych w Depends: s± uruchamiane przed "
-"skryptami pakietów, które od nich zale¿±, a skrypty przedusuwaj±ce "
+"Skrypty poinstalacyjne pakietów wymienionych w polu Depends: s± uruchamiane "
+"przed skryptami pakietów, które od nich zale¿±, a skrypty przedusuwaj±ce - "
+"przed nimi."
 
 # type: TP
 #: ../../man/deb-control.5:114
@@ -1504,15 +1505,15 @@ msgstr "B<Source-Version>"
 
 # type: Plain text
 #: ../../man/deb-substvars.5:68
-#, fuzzy
 msgid ""
 "The source package version (from the changelog file). This variable is now "
 "B<deprecated> as its meaning is different from its function, please use the "
 "B<source:Version> or B<binary:Version> as appropriate."
 msgstr ""
 "Wersja pakietu ¼ród³owego (z pliku zmian). Ta zmienna jest obecnie "
-"B<przestarza³a>, jako ¿e jej znaczenie jest inne ni¿ jej funkcja. Prosimy "
-"u¿ywaæ B<source:Version> lub B<binary:Version>, w zale¿no¶ci od wymagañ."
+"B<przestarza³a>, jako ¿e jej znaczenie jest inne ni¿ jej funkcjonalno¶æ. "
+"Prosimy u¿ywaæ B<source:Version> lub B<binary:Version>, w zale¿no¶ci od "
+"wymagañ."
 
 # type: TP
 #: ../../man/deb-substvars.5:68
@@ -3776,7 +3777,7 @@ msgstr ""
 
 # type: IP
 #: ../../man/dpkg-architecture.1:91
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "architecture wildcard"
 msgstr "maska architektury"
 
@@ -4353,9 +4354,9 @@ msgstr "dpkg-buildpackage"
 
 # type: TH
 #: ../../man/dpkg-buildpackage.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2007-09-28"
-msgstr "2007-09-08"
+msgstr "2007-09-28"
 
 # type: Plain text
 #: ../../man/dpkg-buildpackage.1:4
@@ -4919,11 +4920,12 @@ msgstr "B<-f>I<plik-z-list±-plików>"
 
 # type: Plain text
 #: ../../man/dpkg-distaddfile.1:32 ../../man/dpkg-gencontrol.1:50
-#, fuzzy
 msgid ""
 "Read or write the list of files to be uploaded here, rather than using "
 "B<debian/files>."
-msgstr "Czyta lub zapisuje listê plików do wydania"
+msgstr ""
+"Czyta lub zapisuje listê plików do wydania do pliku podanego jako argument "
+"tej opcji, zamiast do pliku B<debian/files>."
 
 # type: TP
 #: ../../man/dpkg-distaddfile.1:40 ../../man/dpkg-genchanges.1:135
@@ -5845,10 +5847,11 @@ msgstr "B<-V>I<nazwa>B<=>I<warto¶æ>"
 
 # type: Plain text
 #: ../../man/dpkg-genchanges.1:77 ../../man/dpkg-source.1:89
+#, fuzzy
 msgid ""
 "Set an output substitution variable.  See B<deb-substvars>(5) for a "
 "discussion of output substitution."
-msgstr ""
+msgstr "Ustawia zmienn± podstawienia wyj¶cia"
 
 # type: TP
 #: ../../man/dpkg-genchanges.1:77 ../../man/dpkg-gencontrol.1:24
@@ -6080,7 +6083,7 @@ msgstr ""
 #: ../../man/dpkg-gencontrol.1:76
 #, no-wrap
 msgid "B<-P>I<packagebuilddir>"
-msgstr ""
+msgstr "B<-P>I<katalog_budowania_pakietu>"
 
 # type: Plain text
 #: ../../man/dpkg-gencontrol.1:89
@@ -6090,6 +6093,11 @@ msgid ""
 "the B<Installed-Size> substitution variable and control file field (using "
 "B<du>), and for the default location of the output file."
 msgstr ""
+"Mówi programowi B<dpkg-source>, ¿e pakiet jest budowany w "
+"I<katalogu_budowania_pakietu>, zamiast w B<debian/tmp>. Warto¶æ ta jest "
+"u¿ywana do znalezienia domy¶lnej warto¶ci zmiennej podstawiania B<Installed-"
+"Size> oraz pola w pliku kontrolnym o tej samej nazwie (przy u¿yciu du) oraz "
+"domy¶lnej lokalizacji pliku wynikowego."
 
 # type: TP
 #: ../../man/dpkg-gencontrol.1:89 ../../man/dpkg-shlibdeps.1:80
@@ -6103,6 +6111,9 @@ msgid ""
 "Print the control file to standard output, rather than to B<debian/tmp/"
 "DEBIAN/control> (or I<packagebuilddir>B</DEBIAN/control> if B<-P> was used)."
 msgstr ""
+"Wypisuje plik kontrolny na standardowe wyj¶cie, a nie do pliku B<debian/tmp/"
+"DEBIAN/control> (lub I<katalog_budowania_pakietu>B</DEBIAN/control>, gdy "
+"u¿yto B<-P>)."
 
 # type: TP
 #: ../../man/dpkg-gencontrol.1:106
@@ -7244,9 +7255,9 @@ msgstr ""
 # type: Plain text
 #
 #: ../../man/dpkg-source.1:44
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-b> I<directory> [I<orig-directory>|I<orig-targz>|'']"
-msgstr "B<-b> [I<opcje>] I<katalog> [I<oryg-katalog>|I<oryg-targz>|'']"
+msgstr "B<-b> I<katalog> [I<oryg-katalog>|I<oryg-targz>|'']"
 
 # type: Plain text
 #: ../../man/dpkg-source.1:58
@@ -7260,6 +7271,15 @@ msgid ""
 "I<package>B<_>I<upstream-version>B<.orig.tar.gz> or the original source "
 "directory I<directory>B<.orig> depending on the B<-sX> arguments."
 msgstr ""
+"Buduje pakiet ¼ród³owy. Nale¿y podaæ jeden lub dwa argumenty, nie bêd±ce "
+"opcjami. Pierwszym z nich jest nazwa katalogu zawieraj±cego rozpakowane "
+"¼ród³a. Je¿eli podano drugi argument, to powinien on byæ nazw± oryginalnego "
+"katalogu ze ¼ród³ami lub archiwum tar albo pustym ³añcuchem znaków, je¶li "
+"pakiet jest specyficzny dla Debiana i nie ma pliku ró¿nic. Je¿eli nie podano "
+"drugiego argumentu, toB<dpkg-source> - w zale¿no¶ci od argumentów B<-sX> - "
+"bêdzie szuka³ albo archiwum tar z oryginalnymi ¼ród³ami "
+"I<pakiet>B<_>I<wersja_g³ówna>B<.orig.tar.gz>, albo katalogu z oryginalnymi "
+"¼ród³ami I<katalog>.orig."
 
 # type: Plain text
 #: ../../man/dpkg-source.1:73
@@ -7268,6 +7288,9 @@ msgid ""
 "is B<debian/control>.  If given with relative pathname this is interpreted "
 "starting at the source tree's top level directory."
 msgstr ""
+"Okre¶la g³ówny plik kontrolny ¼róde³, z którego bêd± czytane informacje. "
+"Domy¶lnie jest to B<debian/control>. Je¶li podano wzglêdn± ¶cie¿kê, to jest "
+"ona interpretowana od katalogu ¼róde³ najwy¿szego poziomu."
 
 # type: Plain text
 #: ../../man/dpkg-source.1:80
@@ -7356,6 +7379,8 @@ msgid ""
 "The default regexp and patterns for both options can be seen in the output "
 "of the B<--help> command."
 msgstr ""
+"Domy¶lne wyra¿enia regularne i wzorce dla obu opcji mo¿na znale¼æ w wyj¶ciu "
+"polecenia B<--help>."
 
 # type: TP
 #: ../../man/dpkg-source.1:157
@@ -7480,14 +7505,14 @@ msgstr ""
 
 # type: TP
 #: ../../man/dpkg-source.1:229
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<Extract options (with -x):>"
-msgstr "B<Opcje budowania (z -b):>"
+msgstr "B<Opcje rozpakowywania (z -x):>"
 
 # type: Plain text
 #: ../../man/dpkg-source.1:233
 msgid "In all cases any existing original source tree will be removed."
-msgstr ""
+msgstr "We wszystkich przypadkach, istniej±ce oryginalne ¼ród³a bêd± usuniête."
 
 # type: Plain text
 #: ../../man/dpkg-source.1:239
@@ -7517,6 +7542,8 @@ msgid ""
 "All the B<-s>I<X> options are mutually exclusive. If you specify more than "
 "one only the last one will be used."
 msgstr ""
+"Wszystkie spo¶ród opcji B<-s>I<-X> siê wzajemnie wykluczaj±. Je¶li zostanie "
+"podana wiêcej ni¿ jedna, to zostanie u¿yta ostatnia z nich."
 
 # type: Plain text
 #: ../../man/dpkg-source.1:263
@@ -11192,7 +11219,3 @@ msgstr ""
 #: ../../man/update-alternatives.8:405
 msgid "B<ln>(1), FHS, the Filesystem Hierarchy Standard."
 msgstr "B<ln>(1), FHS - standard hierarchii systemu plików."
-
-# type: TH
-#~ msgid "2007-08-31"
-#~ msgstr "2007-08-31"
