--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-08  Robert Luberda  <robert@debian.org>
+
+	* pl.po: Updated to 929t.
+
 2007-09-19  Sunjae Park  <darehanl@gmail.com>
 
 	* ko.po: Updated to 929t.
