--- a/scripts/po/pl.po
+++ b/scripts/po/pl.po
@@ -1,18 +1,17 @@
 # dpkg-sources.pl.po
 # Robert Luberda <robert@debian.org>, 2007
 msgid ""
-msgstr ""
-"Project-Id-Version: dpkg 1.14.6\n"
+msgstr "Project-Id-Version: dpkg 1.14.17\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-09-23 02:59+0200\n"
-"PO-Revision-Date: 2007-10-07 23:26+0100\n"
+"PO-Revision-Date: 2007-10-08 22:57+0200\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 ||"
+" n%100>=20) ? 1 : 2;\n"
+"MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
 
 #: scripts/822-date.pl:14
 msgid "Usage: 822-date"
@@ -2591,3 +2590,4 @@ msgstr " oczekiwano %s, znaleziono koniec pliku"
 #, perl-format
 msgid "%s, at file %s line %d"
 msgstr "%s, w pliku %s, linia %d"
+
