debian/rules: Call $(MAKE) check during build

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,9 @@ dpkg (1.14.8) UNRELEASED; urgency=low
       shared library that is actively used, then it will fail. This can be
       disabled with the option --ignore-missing-info. Closes: #10807
 
+  [ Frank Lichtenheld ]
+  * Add $(MAKE) check to build target
+
   [ Updated dpkg translations ]
   * Polish (Robert Luberda).
 
