dpkg-gensymbols: Use the new Dpkg module

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-09  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-gensymbols.pl: Use new Dpkg module. Do not declare
+	nor initialize $version, $dpkglibdir and $progname anymore.
+
 2007-10-09  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-buildpackage.pl: Add -z/-Z to
