dpkg-source: Some cleanup on the -Z feature
Use the same semantics as dpkg-deb -Z (i.e. specify
program to use, not the extension).
Update the man page to be less V1 specific.

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,7 +12,7 @@
 	wig&pen (aka Format: 2.0) on build:
 	Use .orig.tar.(bz2|lzma) if they are available
 	and no .gz can be found. Also let the user specify
-	via -Z(gz|bz2|lzma) how files that need to be
+	via -Z(gzip|bzip2|lzma) how files that need to be
 	generated should be compressed. -z([1-9]|best|fast)
 	can be used to specify the compression level
 	to use.
