--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,9 @@
 2007-10-09  Frank Lichtenheld  <djpig@debian.org>
-	
+
+	* dpkg-source.1: Change the rest of the
+	man page to not contain any hardcoded
+	.gz references.
+
 	* dpkg-buildpackage.1: Document all
 	options only passed to dpkg-source.
 	-s[nsAkurKUR], -z, and -Z were missing.
