--- a/ChangeLog
+++ b/ChangeLog
@@ -17,8 +17,8 @@
 	can be used to specify the compression level
 	to use.
 
-2007-10-08  Raphael Hertzog  <hertzog@debian.org>,
-	    Frank Lichtenheld <djpig@debian.org>
+2007-10-08  Raphael Hertzog  <hertzog@debian.org>
+	    Frank Lichtenheld  <djpig@debian.org>
 
 	* Merge dpkg-shlibdeps-buxy branch.
 
