dpkg-source: Update description of -W and -E
-W is the default for quite some time already. Adapt the
description of -W and -E.

Also update the description of this options in dpkg-buildpackage.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,11 @@
 
 2007-10-09  Frank Lichtenheld  <djpig@debian.org>
 
+	* scripts/dpkg-source.pl (usage): -W is the default
+	for quite some time already. Adapt the description of
+	-W and -E.
+	* scripts/dpkg-buildpackage.pl (usage): likewise.
+
 	* scripts/dpkg-buildpackage.pl: Add -z/-Z to
 	passthrough opts (will be passed to dpkg-source).
 
