--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-09  Frank Lichtenheld  <djpig@debian.org>
 
+	* dpkg-source.1: -W is the default for quite
+	some time already. Adapt the description of
+	-W and -E.
+	* dpkg-buildpackage.1: likewise.
+
 	* dpkg-source.1: Change the rest of the
 	man page to not contain any hardcoded
 	.gz references.
