--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -101,12 +101,12 @@ Override or add an output control file field.
 .BI \-U field
 Remove an output control file field.
 .TP
-.BI \-W
-This option turns certain errors into warnings.
-.TP
 .BI \-E
+This option turns certain warnings into errors.
+.TP
+.BI \-W
 This option negates a previously set
-.BR \-W "."
+.BR \-E "."
 .TP
 .BR \-Z \fIcompression\fP
 Specify the compression to use for created files (tarballs and diffs).
