Use shipped perl modules when calling perl programs at build time

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-10  Guillem Jover  <guillem@debian.org>
+
+	* m4/arch.m4(_DPKG_ARCHITECTURE): Set PERL5LIB when calling
+	dpkg-architecture.pl to use the shipped perl modules instead of
+	the system ones.
+
 2007-10-09  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-gensymbols.pl: Use new Dpkg module. Do not declare
