--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,9 @@ dpkg (1.14.8) UNRELEASED; urgency=low
   * Various small fixes to the manpages suggested by Helge Kreutzmann.
     Closes: #445858
 
+  [ Guillem Jover ]
+  * Use shipped perl modules when calling perl programs at build time.
+
   [ Updated dpkg translations ]
   * Polish (Robert Luberda).
 
