--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-10  Guillem Jover  <guillem@debian.org>
 
+	* scripts/Dpkg/ErrorHandling.pm ($warnable_error): Set to 1 to match
+	controllib.pl.
+
+2007-10-10  Guillem Jover  <guillem@debian.org>
+
 	* m4/arch.m4(_DPKG_ARCHITECTURE): Set PERL5LIB when calling
 	dpkg-architecture.pl to use the shipped perl modules instead of
 	the system ones.
