Dpkg/ErrorHandling.pm: Use Dpkg module instead of defining $progname

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-10-10  Guillem Jover  <guillem@debian.org>
 
+	* scripts/Dpkg/ErrorHandling.pm: Use Dpkg.
+	($progname): Do not set nor declare it.
+
+2007-10-10  Guillem Jover  <guillem@debian.org>
+
 	* scripts/Dpkg/ErrorHandling.pm ($warnable_error): Set to 1 to match
 	controllib.pl.
 
