Various manpage fixes

--- a/man/dpkg-gencontrol.1
+++ b/man/dpkg-gencontrol.1
@@ -114,7 +114,7 @@ The list of generated files which are part of the upload being
 prepared.
 .B dpkg\-gencontrol
 adds the presumed filenames of binary packages whose control files it
-generates here;
+generates here.
 .
 .SH AUTHORS
 Copyright (C) 1995-1996 Ian Jackson
