--- a/man/install-info.8
+++ b/man/install-info.8
@@ -44,7 +44,7 @@ updated or removed. If
 .B \-\-remove\-exactly
 is specified, then
 .I filename
-should be the exact entry name to be removed (i.e. "emacs\-20/emacs" or
+should be the exact entry name to be removed (e.g. "emacs\-20/emacs" or
 "gcc"), otherwise the basename of this filename is used as the
 referent of the menu entry which is created, unless there's an
 overriding START-INFO-DIR entry inside the given file. This file must
@@ -107,7 +107,7 @@ except that
 is taken as the exact entry to be removed, rather than as the name
 of an existing file. This can be important when trying to remove
 entries that refer to info files in subdirectories
-(i.e. "emacs\-20/emacs") because
+(e.g. "emacs\-20/emacs") because
 .B \-\-remove
 will operate on the basename of the given
 .I filename
