--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,8 @@ dpkg (1.14.8) UNRELEASED; urgency=low
   * Allow to use other compressions than gzip on dpkg-source -b
     (NOTE: this will result in a Format: 2.0 source package!).
     Closes: #382673
+  * Various small fixes to the manpages suggested by Helge Kreutzmann.
+    Closes: #445858
 
   [ Updated dpkg translations ]
   * Polish (Robert Luberda).
