--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-11  Frank Lichtenheld  <djpig@debian.org>
+
+	* po/dpkg-man.pot: Regenerated.
+	* po/*.po: Merged with dpkg-man.pot.
+
 2007-10-09  Frank Lichtenheld  <djpig@debian.org>
 
 	* dpkg-source.1: -W is the default for quite
