--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,7 @@ dpkg (1.14.8) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Use shipped perl modules when calling perl programs at build time.
+  * Switch perl programs to use the new Dpkg/ErrorHandling module.
 
   [ Updated dpkg translations ]
   * Polish (Robert Luberda).
