* man/po/de.po: Updated to 1279t0f64u.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-10-11  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1279t0f64u.
+
 2007-10-11  Frank Lichtenheld  <djpig@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
