--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,7 @@ dpkg (1.14.8) UNRELEASED; urgency=low
   * Polish (Robert Luberda).
 
   [ Updated man pages translations ]
+  * German (Helge Kreutzmann).
   * Polish (Robert Luberda).
 
   [ Updated scripts translations ]
