--- a/man/po/de.po
+++ b/man/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2007-10-11 01:01+0200\n"
-"PO-Revision-Date: 2007-10-11 19:00+0200\n"
+"PO-Revision-Date: 2007-10-11 21:19+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -397,7 +397,7 @@ msgstr "DATEIEN"
 #: ../../man/cleanup-info.8:44
 #, no-wrap
 msgid "I</usr/info/dir> or I<E<lt>dirnameE<gt>/dir>"
-msgstr "I</usr/info/dir> oder I<E<lt>Verzeichnisname<gt>/dir>"
+msgstr "I</usr/info/dir> oder I<E<lt>VerzeichnisnameE<gt>/dir>"
 
 # type: Plain text
 #: ../../man/cleanup-info.8:47
