--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-12  Frank Lichtenheld  <djpig@debian.org>
+
+	* Makefile.am (update-po): New target to easily
+	update the .pot and .po files. Uses po4a --force.
+
 2007-10-11  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1279t0f64u.
