dpkg.1: Remove some unneccessary markup

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,8 @@
 2007-10-12  Frank Lichtenheld  <djpig@debian.org>
 
+	* dpkg.1 (AUTHORS): Remove some unneccessary markup.
+	Allows reuse of one more msgid.
+
 	* Makefile.am (update-po): New target to easily
 	update the .pot and .po files. Uses po4a --force.
 
