--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-10-12  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/Dpkg/BuildOptions.pm (parse): Add
+	support for nocheck.
+
 2007-10-11  Guillem Jover  <guillem@debian.org>
 
 	* scripts/controllib.pl ($warnable_error, $quiet_warnings): Remove
