Dpkg::BuildOptions: Really set DEB_BUILD_OPTIONS
Discovered by Daniel Shepler.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* scripts/Dpkg/BuildOptions.pm (parse): Add
 	support for nocheck.
+	(set): Really set DEB_BUILD_OPTIONS. Discovered
+	by Daniel Shepler.
 
 2007-10-11  Guillem Jover  <guillem@debian.org>
 
