--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,8 @@ dpkg (1.14.8) UNRELEASED; urgency=low
     Closes: #382673
   * Various small fixes to the manpages suggested by Helge Kreutzmann.
     Closes: #445858
+  * Fix Dpkg::BuildOptions (and thereby dpkg-buildpackage) to really
+    set DEB_BUILD_OPTIONS. Found by Daniel Shepler. Closes: #446119
 
   [ Guillem Jover ]
   * Use shipped perl modules when calling perl programs at build time.
