Dpkg::BuildOptions: Add tests and fix errors found
This whole module was one giant brown paper bag bug...

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 2007-10-12  Frank Lichtenheld  <djpig@debian.org>
 
+	* scripts/t/300_Dpkg_BuildOptions.t: New file.
+	Leads to the following fixes:
 	* scripts/Dpkg/BuildOptions.pm (parse): Add
-	support for nocheck.
+	support for nocheck and make it actually work.
 	(set): Really set DEB_BUILD_OPTIONS. Discovered
 	by Daniel Shepler.
 
